--- a/index.html
+++ b/index.html
@@ -10,120 +10,109 @@
 
 <style>
 :root{
-  --vv-green:#76b900;    /* vivid green */
-  --vv-purple:#4300b9;   /* vivid purple */
-  --vv-dark:#141316;
-  --vv-text:#2c2c2c;
-  --vv-muted:#6b6b6b;
-  --vv-bg:#f4f4f7;
-  --shadow:0 10px 30px rgba(0,0,0,.08);
+    --vv-green:#76b900;  
+    --vv-purple:#4300b9;  
+    --vv-dark:#141316;
+    --vv-text:#2c2c2c;
+    --vv-muted:#6b6b6b;
+    --vv-bg:#f4f4f7;
+    --shadow:0 10px 30px rgba(0,0,0,.08);
 }
-*{box-sizing:border-box;}
-html,body{margin:0; padding:0;}
+*{box-sizing:border-box}
+html,body{margin:0}
 body{
-  font-family:'Lora', serif;
-  color:var(--vv-text);
-  background:var(--vv-bg);
-  line-height:1.6;
-  overflow-x:hidden;
+    font-family:'Lora', serif;
+    color:var(--vv-text);
+    background:var(--vv-bg);
+    line-height:1.6;
 }
 
-/* ===== NAVBAR ===== */
+/* NAVBAR */
 .nav{
-  position:sticky; top:0; z-index:50;
-  background:#fff; border-bottom:1px solid #ececf0;
-  box-shadow:0 6px 14px rgba(67,0,185,0.05);
+    position:sticky; top:0; z-index:50;
+    background:#fff; border-bottom:1px solid #ececf0;
+    box-shadow:0 6px 14px rgba(67,0,185,0.05);
 }
 .nav-inner{
-  max-width:1100px; margin:0 auto; padding:10px 20px;
-  display:flex; align-items:center; justify-content:space-between; gap:16px;
+    max-width:1100px; margin:0 auto; padding:10px 20px;
+    display:flex; align-items:center; justify-content:space-between; gap:16px;
 }
 .brand{display:flex; align-items:center; gap:12px}
 .brand img{height:48px; width:auto}
 .brand .name{font:800 1.5rem/1 'Montserrat', sans-serif; color:var(--vv-purple)}
 .menu{
-  display:flex; gap:18px; align-items:center;
+    display:flex; gap:18px; align-items:center;
 }
 .menu a{
-  font:600 0.95rem/1 'Montserrat', sans-serif;
-  color:var(--vv-purple); text-decoration:none;
-  padding:8px 12px; border-radius:10px; transition:all .2s ease;
+    font:600 0.95rem/1 'Montserrat', sans-serif;
+    color:var(--vv-purple); text-decoration:none;
+    padding:8px 12px; border-radius:10px; transition:all .2s ease;
 }
 .menu a:hover,.menu a.active{ background:var(--vv-purple); color:#fff }
 
-/* Hamburger menu */
-.hamburger {
-  display:none;
-  flex-direction: column;
-  cursor: pointer;
-  gap:5px;
+.hamburger{
+    display:none;
+    flex-direction:column;
+    cursor:pointer;
+    gap:4px;
 }
-.hamburger div{
-  width:25px; height:3px; background-color:var(--vv-purple);
-  border-radius:3px;
+.hamburger span{
+    display:block; width:25px; height:3px;
+    background:var(--vv-purple);
+    border-radius:2px;
 }
 
-/* Mobile menu */
-.mobile-menu {
-  display:none;
-  flex-direction:column;
-  background:#fff;
-  position:absolute;
-  top:65px; right:0;
-  width:200px;
-  border:1px solid #ececf0;
-  border-radius:10px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.1);
-  z-index:100;
-}
-.mobile-menu a{
-  padding:10px 15px;
-  border-bottom:1px solid #ececf0;
-}
-.mobile-menu a:last-child{ border-bottom:none; }
-
-/* ===== HERO ===== */
+/* HERO */
 .hero{
-  position:relative; isolation:isolate;
-  min-height:72vh; display:grid; place-items:center;
-  padding:72px 20px 56px;
-  background:
-    radial-gradient(1200px 500px at 10% -10%, rgba(118,185,0,.35),transparent 60%),
-    radial-gradient(1200px 500px at 110% 10%, rgba(67,0,185,.35),transparent 60%),
-    #0f0d2a;
-  overflow:hidden;
-  text-align:center;
+    position:relative; isolation:isolate;
+    min-height:72vh; display:grid; place-items:center;
+    padding:72px 20px 56px;
+    background:
+      radial-gradient(1200px 500px at 10% -10%, rgba(118,185,0,.35),transparent 60%),
+      radial-gradient(1200px 500px at 110% 10%, rgba(67,0,185,.35),transparent 60%),
+      #0f0d2a;
+    overflow:hidden;
+    text-align:center;
 }
 .hero::before{
-  content:"";
-  position:absolute; inset:0; z-index:-1;
-  opacity:.35; filter:contrast(110%) saturate(110%) blur(1px);
+    content:"";
+    position:absolute; inset:0; z-index:-1;
+    opacity:.35; filter:contrast(110%) saturate(110%) blur(1px);
 }
 .hero-card{
-  width:100%; max-width:920px;
-  background:rgba(255,255,255,.92);
-  border-radius:24px; box-shadow:var(--shadow);
-  padding:32px; backdrop-filter:saturate(130%) blur(4px);
+    width:100%; max-width:920px;
+    background:rgba(255,255,255,.92);
+    border-radius:24px; box-shadow:var(--shadow);
+    padding:32px; backdrop-filter:saturate(130%) blur(4px);
+    text-align:center;
 }
-.hero h1{font-family:'Montserrat',sans-serif;font-weight:800;font-size:2.4rem;color:#111;margin:0.5rem 0;}
-.hero p{max-width:760px;margin:.5rem auto 1.25rem;color:#333;font-size:1.05rem;}
+.hero h1{font-family:'Montserrat',sans-serif;font-weight:800;font-size:2.4rem;color:#111; margin-bottom:10px;}
+.hero p{max-width:760px;margin:.75rem auto 1rem;color:#333;font-size:1.05rem}
+
+/* Rich Premium Tagline */
 .hero .tagline{
-  font-family:'Montserrat',sans-serif;
-  font-weight:800;
-  font-size:1.8rem;
-  color:var(--vv-green);
-  margin-top:0.5rem;
-  letter-spacing:1px;
+    font-family:'Montserrat',sans-serif;
+    font-weight:800;
+    font-size:1.5rem;
+    color: #fff;
+    background: linear-gradient(135deg, var(--vv-green), var(--vv-purple));
+    display:inline-block;
+    padding:12px 20px;
+    border-radius:24px;
+    box-shadow:0 8px 20px rgba(67,0,185,.25);
+    margin-top:15px;
 }
+
+/* BUTTONS */
 .btn{
-  background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
-  color:#fff;border:0;padding:14px 20px;border-radius:12px;
-  font-weight:700;font-family:'Montserrat',sans-serif;cursor:pointer;
-  box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
+    background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
+    color:#fff;border:0;padding:14px 20px;border-radius:12px;
+    font-weight:700;font-family:'Montserrat',sans-serif;cursor:pointer;
+    box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
 }
 .btn:hover{opacity:.9}
 
-/* ===== SECTIONS ===== */
+/* SECTIONS */
 section{max-width:1100px;margin:64px auto;padding:0 20px}
 section.card{ background:#fff; border-radius:20px; box-shadow:var(--shadow); padding:28px; }
 h2.section-title{ font-family:'Montserrat',sans-serif; font-weight:800; font-size:2rem; margin:.25rem 0 1rem; color:#222 }
@@ -137,11 +126,127 @@ h2.section-title{ font-family:'Montserrat',sans-serif; font-weight:800; font-siz
 
 footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 
-/* Mobile adjustments */
-@media (max-width:768px){
-  .menu{display:none;}
-  .hamburger{display:flex;}
+/* Mobile Navbar */
+@media(max-width:768px){
+    .menu{display:none; position:absolute; top:65px; right:20px; background:#fff; flex-direction:column; width:200px; padding:10px; border-radius:16px; box-shadow:var(--shadow);}
+    .menu.show{display:flex;}
+    .hamburger{display:flex;}
 }
+
+/* AI avatar for login */
+.ai-login{
+    width:38px; height:38px; border-radius:50%;
+    cursor:pointer;
+    background:url('ai-avatar.png') center/cover no-repeat;
+    display:inline-block;
+}
+
+/* CHATBOT STYLES */
+#chat-icon {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #4caf50;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  z-index: 9999;
+  transition: transform 0.3s;
+}
+#chat-icon:hover { transform: scale(1.1); }
+
+#chatbox {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  width: 350px;
+  height: 450px;
+  background-color: #2e2e2e;
+  border-radius: 16px;
+  display: none;
+  flex-direction: column;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+  z-index: 9999;
+  overflow: hidden;
+  animation: slideIn 0.3s ease;
+}
+@keyframes slideIn {
+  from { transform: translateY(100px); opacity: 0; }
+  to { transform: translateY(0); opacity: 1; }
+}
+#chat-header {
+  background-color: #4caf50;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#close-btn { cursor: pointer; font-weight: bold; }
+#messages {
+  flex: 1;
+  padding: 10px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.message {
+  max-width: 80%;
+  padding: 10px;
+  border-radius: 12px;
+  color: #fff;
+  word-wrap: break-word;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  animation: fadeIn 0.3s ease;
+}
+.user-message {
+  background-color: #555;
+  align-self: flex-end;
+  border-bottom-right-radius: 0;
+}
+.ai-message {
+  background-color: #4caf50;
+  align-self: flex-start;
+  border-bottom-left-radius: 0;
+}
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px);}
+  to { opacity: 1; transform: translateY(0);}
+}
+#input-container {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid #444;
+}
+#user-input {
+  flex: 1;
+  padding: 10px;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  background-color: #444;
+  color: #fff;
+}
+#send-btn {
+  padding: 10px 15px;
+  margin-left: 8px;
+  border: none;
+  border-radius: 12px;
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+#send-btn:hover { background-color: #45a049; }
+
 </style>
 </head>
 <body>
@@ -153,28 +258,22 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
       <img src="Valiant Vision.jpg" alt="Valiant Vision logo">
       <div class="name">Valiant Vision</div>
     </div>
-    <div class="menu">
+
+    <!-- Hamburger for mobile -->
+    <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+    </div>
+
+    <div class="menu" id="menu">
       <a href="#about" class="active">About Us</a>
       <a href="#problem">Problem</a>
       <a href="#solution">Our Solution</a>
       <a href="subscribe.html">Subscribe</a>
       <a href="whiteboard.html">Whiteboard</a>
-      <a id="ai-login" href="login.html">
-        <img src="ai-avatar.png" alt="AI Avatar" style="width:32px;height:32px;border-radius:50%;">
-      </a>
+      <a href="profile.html">My Profile</a>
+      <!-- AI Avatar -->
+      <div class="ai-login" id="ai-login" title="AI Login"></div>
     </div>
-    <div class="hamburger" id="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-  <div class="mobile-menu" id="mobile-menu">
-    <a href="#about">About Us</a>
-    <a href="#problem">Problem</a>
-    <a href="#solution">Our Solution</a>
-    <a href="subscribe.html">Subscribe</a>
-    <a href="whiteboard.html">Whiteboard</a>
   </div>
 </nav>
 
@@ -184,6 +283,7 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
     <h1>Give Your Curiosity a Home</h1>
     <p>Unlock monthly creativity kits designed by mentors from leading universities. Join our journey of learning by doing.</p>
     <div class="tagline">The Way It's Meant To Be Learnt</div>
+    <br><br>
     <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
   </div>
 </header>
@@ -220,32 +320,7 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
-<!-- Hamburger Script -->
-<script>
-const hamburger = document.getElementById('hamburger');
-const mobileMenu = document.getElementById('mobile-menu');
-hamburger.addEventListener('click', ()=>{
-  mobileMenu.style.display = mobileMenu.style.display === 'flex' ? 'none' : 'flex';
-});
-</script>
-
-<!-- AI Chatbot Widget -->
-<style>
-#chat-icon { position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background-color:#4caf50; border-radius:50%; cursor:pointer; display:flex; justify-content:center; align-items:center; color:white; font-size:30px; box-shadow:0 5px 15px rgba(0,0,0,0.3); z-index:9999; transition: transform 0.3s;}
-#chat-icon:hover { transform: scale(1.1);}
-#chatbox { position: fixed; bottom:90px; right:20px; width:350px; height:450px; background:#2e2e2e; border-radius:16px; display:none; flex-direction:column; box-shadow:0 8px 25px rgba(0,0,0,0.4); z-index:9999; overflow:hidden;}
-#chat-header { background:#4caf50; padding:10px; color:white; font-weight:bold; display:flex; justify-content:space-between; align-items:center;}
-#close-btn{cursor:pointer;font-weight:bold;}
-#messages{flex:1; padding:10px; overflow-y:auto; display:flex; flex-direction:column; gap:8px;}
-.message{max-width:80%; padding:10px; border-radius:12px; color:#fff; word-wrap:break-word; box-shadow:0 2px 5px rgba(0,0,0,0.2);}
-.user-message{background-color:#555; align-self:flex-end; border-bottom-right-radius:0;}
-.ai-message{background-color:#4caf50; align-self:flex-start; border-bottom-left-radius:0;}
-#input-container{display:flex; padding:10px; border-top:1px solid #444;}
-#user-input{flex:1; padding:10px; border-radius:12px; border:none; outline:none; background:#444; color:#fff;}
-#send-btn{padding:10px 15px; margin-left:8px; border:none; border-radius:12px; background:#4caf50; color:white; cursor:pointer;}
-#send-btn:hover{background:#45a049;}
-</style>
-
+<!-- AI Chatbot -->
 <div id="chat-icon">💬</div>
 <div id="chatbox">
   <div id="chat-header">AI Assistant <span id="close-btn">✖</span></div>
@@ -257,17 +332,32 @@ hamburger.addEventListener('click', ()=>{
 </div>
 
 <script>
-const scriptURL = "https://valiantvision-ai.narendersindhu1977.workers.dev/";
+// Hamburger toggle
+const hamburger = document.getElementById('hamburger');
+const menu = document.getElementById('menu');
+hamburger.addEventListener('click', () => {
+    menu.classList.toggle('show');
+});
 
+// AI login click
+const aiLogin = document.getElementById('ai-login');
+aiLogin.addEventListener('click', ()=>{
+    window.location.href='login.html';
+});
+
+// Chat toggle
 const chatIcon = document.getElementById('chat-icon');
 const chatBox = document.getElementById('chatbox');
 const closeBtn = document.getElementById('close-btn');
-
-chatIcon.addEventListener('click', () => { chatBox.style.display='flex'; });
+chatIcon.addEventListener('click', ()=>{ chatBox.style.display='flex'; });
 closeBtn.addEventListener('click', ()=>{ chatBox.style.display='none'; });
 
+// Chat send
 document.getElementById('send-btn').addEventListener('click', handleSend);
-document.getElementById('user-input').addEventListener('keypress', function(e){ if(e.key==='Enter') handleSend(); });
+document.getElementById('user-input').addEventListener('keypress', function(e){
+  if(e.key==='Enter') handleSend();
+});
+const scriptURL="https://valiantvision-ai.narendersindhu1977.workers.dev/";
 
 async function handleSend(){
   const input=document.getElementById('user-input');
@@ -277,21 +367,16 @@ async function handleSend(){
   input.value='';
   addMessage("Thinking... 🤔",'ai-message');
   try{
-    const response=await fetch(scriptURL,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({prompt:message})
-    });
+    const response=await fetch(scriptURL,{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({prompt:message})});
     const contentType=response.headers.get("content-type")||"";
     if(!contentType.includes("application/json")) throw new Error("Server returned HTML instead of JSON.");
     const data=await response.json();
     const messagesDiv=document.getElementById('messages');
     const lastMsg=messagesDiv.lastChild;
     if(lastMsg && lastMsg.textContent==="Thinking... 🤔") lastMsg.remove();
-    addMessage(data.result||"No response from AI",'ai-message');
+    addMessage(data.result || "No response from AI",'ai-message');
   } catch(err){ console.error(err); addMessage("Error connecting to AI.",'ai-message'); }
 }
-
 function addMessage(text,className){
   const messages=document.getElementById('messages');
   const msgDiv=document.createElement('div');
@@ -301,6 +386,5 @@ function addMessage(text,className){
   messages.scrollTop=messages.scrollHeight;
 }
 </script>
-
 </body>
 </html>
