--- a/index.html
+++ b/index.html
@@ -49,6 +49,43 @@ body{
     padding:8px 12px; border-radius:10px; transition:all .2s ease;
 }
 .menu a:hover,.menu a.active{ background:var(--vv-purple); color:#fff }
+.nav-links {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+/* Separate AI button styling */
+.menu {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.ai-login {
+  margin-left: 12px;
+  border: 2px solid rgba(67, 0, 185, 0.2);
+}
+.ai-login::after {
+  content: 'AI Assistant';
+  position: absolute;
+  top: 60px;
+  right: 0;
+  background: #fff;
+  color: var(--vv-purple);
+  font-size: 0.75rem;
+  padding: 4px 8px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.1);
+  opacity: 0;
+  transform: translateY(-8px);
+  pointer-events: none;
+  transition: all .25s ease;
+}
+.ai-login:hover::after {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .hamburger{
     display:none;
@@ -167,15 +204,17 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
     </div>
 
     <div class="menu" id="menu">
-      <a href="#about" class="active">About Us</a>
-      <a href="#problem">Problem</a>
-      <a href="#solution">Our Solution</a>
-      <a href="subscribe.html">Subscribe</a>
-      <a href="whiteboard.html">Whiteboard</a>
-      <a href="profile.html">My Profile</a>
-      <!-- AI Avatar -->
-      <div class="ai-login" id="ai-login" title="AI Login"></div>
-    </div>
+  <div class="nav-links">
+    <a href="#about" class="active">About Us</a>
+    <a href="#problem">Problem</a>
+    <a href="#solution">Our Solution</a>
+    <a href="subscribe.html">Subscribe</a>
+    <a href="whiteboard.html">Whiteboard</a>
+    <a href="profile.html">My Profile</a>
+  </div>
+  <div class="ai-login" id="ai-login" title="AI Assistant"></div>
+</div>
+
   </div>
 </nav>
 
@@ -264,4 +303,5 @@ aiLoginDiv.style.background = `linear-gradient(135deg, ${c1}, ${c2})`;
 
 </body>
 </html>
+
 
