--- a/index.html
+++ b/index.html
@@ -181,10 +181,35 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
   cursor: pointer;
   box-shadow: 0 0 12px rgba(67,0,185,0.3);
   transition: transform 0.2s ease, box-shadow 0.3s ease;
+  position: relative;
 }
+
 .ai-login:hover {
   transform: scale(1.05);
   box-shadow: 0 0 16px rgba(67,0,185,0.45);
+}
+
+/* Tooltip text on hover */
+.ai-login::after {
+  content: 'Login';
+  position: absolute;
+  top: 48px;
+  right: 50%;
+  transform: translateX(50%);
+  background: #fff;
+  color: var(--vv-purple);
+  font-size: 0.75rem;
+  padding: 4px 8px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.25s ease;
+}
+
+.ai-login:hover::after {
+  opacity: 1;
+  transform: translateX(50%) translateY(5px);
 }
 </style>
 </head>
@@ -278,7 +303,7 @@ aiLogin.addEventListener('click', ()=>{
 <script>
 // Dynamic AI avatar with gradient + initial
 const aiLoginDiv = document.getElementById('ai-login');
-const aiName = "AI"; // change later if you want user initials
+const aiName = "🤖"; // change later if you want user initials
 aiLoginDiv.textContent = aiName[0];
 
 function randomGradient() {
@@ -303,5 +328,6 @@ aiLoginDiv.style.background = `linear-gradient(135deg, ${c1}, ${c2})`;
 
 </body>
 </html>
+
 
 
