--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ aiLogin.addEventListener('click', ()=>{
 <script>
 // Dynamic AI avatar with gradient + initial
 const aiLoginDiv = document.getElementById('ai-login');
-const aiName = "🤖"; // change later if you want user initials
+const aiName = "L"; // change later if you want user initials
 aiLoginDiv.textContent = aiName[0];
 
 function randomGradient() {
@@ -328,6 +328,7 @@ aiLoginDiv.style.background = `linear-gradient(135deg, ${c1}, ${c2})`;
 
 </body>
 </html>
+
 
 
 
