--- a/login.html
+++ b/login.html
@@ -1,86 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Login - Valiant Vision</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-<style>
-  :root{
-    --vv-green:#76b900;
-    --vv-purple:#4300b9;
-    --vv-dark:#141316;
-    --vv-text:#2c2c2c;
-    --vv-bg:#f4f4f7;
-    --shadow:0 10px 30px rgba(0,0,0,.08);
-  }
-  *{box-sizing:border-box;}
-  body{margin:0;font-family:'Lora', serif; background:var(--vv-bg); color:var(--vv-text);}
-  
-  /* Navbar */
-  .nav{
-    position:sticky; top:0; z-index:50;
-    background:#fff; border-bottom:1px solid #ececf0;
-    box-shadow:0 6px 14px rgba(67,0,185,0.05);
-  }
-  .nav-inner{
-    max-width:1100px; margin:0 auto; padding:10px 20px;
-    display:flex; align-items:center; justify-content:space-between; gap:16px;
-  }
-  .brand{display:flex; align-items:center; gap:12px;}
-  .brand img{height:48px; width:auto;}
-  .brand .name{font:800 1.5rem/1 'Montserrat', sans-serif; color:var(--vv-purple);}
-  .menu{display:flex; gap:18px; align-items:center;}
-  .menu a, .menu #ai-avatar{
-    font:600 0.95rem/1 'Montserrat', sans-serif;
-    color:var(--vv-purple); text-decoration:none;
-    padding:8px 12px; border-radius:10px; transition:all .2s ease;
-    display:flex; align-items:center; gap:8px;
-  }
-  .menu a:hover,.menu a.active, #ai-avatar:hover{ background:var(--vv-purple); color:#fff; cursor:pointer; }
-  #ai-avatar img{height:36px; width:36px; border-radius:50%;}
 
-  /* Login Container */
-  .login-container{
-    max-width:420px; margin:60px auto;
-    background:#fff; padding:32px; border-radius:24px; box-shadow:var(--shadow);
-    text-align:center;
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet" />
+
+<style>
+  :root {
+    --vv-green: #76b900;
+    --vv-purple: #4300b9;
+    --vv-dark: #141316;
+    --vv-text: #2c2c2c;
+    --vv-bg: #f4f4f7;
+    --shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
   }
-  .login-container h1{font-family:'Montserrat',sans-serif;font-weight:800;font-size:2rem;color:var(--vv-purple); margin-bottom:16px;}
-  .login-container p{margin-bottom:24px; color:#555;}
-  .login-container input{
-    width:100%; padding:14px 16px; margin-bottom:16px;
-    border-radius:12px; border:1px solid #ccc; outline:none; font-size:1rem;
+  * {
+    box-sizing: border-box;
   }
-  .login-container button{
-    width:100%; padding:14px 20px; background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
-    border:none; border-radius:12px; color:#fff; font-weight:700; font-family:'Montserrat',sans-serif;
-    cursor:pointer; font-size:1rem; transition:.2s;
+  body {
+    margin: 0;
+    font-family: "Lora", serif;
+    background: var(--vv-bg);
+    color: var(--vv-text);
   }
-  .login-container button:hover{opacity:.9;}
+
+  /* ===== Navbar ===== */
+  .nav {
+    position: sticky;
+    top: 0;
+    z-index: 50;
+    background: #fff;
+    border-bottom: 1px solid #ececf0;
+    box-shadow: 0 6px 14px rgba(67, 0, 185, 0.05);
+  }
+  .nav-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .brand {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .brand img {
+    height: 44px;
+    width: auto;
+  }
+  .brand .name {
+    font: 800 1.4rem "Montserrat", sans-serif;
+    color: var(--vv-purple);
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  .menu a {
+    font: 600 0.95rem "Montserrat", sans-serif;
+    color: var(--vv-purple);
+    text-decoration: none;
+    transition: 0.2s ease;
+  }
+  .menu a:hover {
+    color: var(--vv-green);
+  }
+
+  /* ===== AI / Login Button ===== */
+  #ai-avatar {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, var(--vv-purple), var(--vv-green));
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 0.95rem;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(67, 0, 185, 0.3);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+  }
+  #ai-avatar:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(67, 0, 185, 0.4);
+  }
+
+  /* ===== Login Container ===== */
+  .login-container {
+    max-width: 420px;
+    margin: 60px auto;
+    background: #fff;
+    padding: 32px;
+    border-radius: 24px;
+    box-shadow: var(--shadow);
+    text-align: center;
+  }
+  .login-container h1 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    color: var(--vv-purple);
+    margin-bottom: 16px;
+  }
+  .login-container p {
+    margin-bottom: 24px;
+    color: #555;
+  }
+  .login-container input {
+    width: 100%;
+    padding: 14px 16px;
+    margin-bottom: 16px;
+    border-radius: 12px;
+    border: 1px solid #ccc;
+    outline: none;
+    font-size: 1rem;
+  }
+  .login-container button {
+    width: 100%;
+    padding: 14px 20px;
+    background: linear-gradient(135deg, var(--vv-purple), var(--vv-green));
+    border: none;
+    border-radius: 12px;
+    color: #fff;
+    font-weight: 700;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: 0.2s;
+  }
+  .login-container button:hover {
+    opacity: 0.9;
+  }
 
   /* Responsive */
-  @media (max-width:768px){
-    .menu{display:none;}
-    .hamburger{display:flex; flex-direction:column; cursor:pointer;}
-    .hamburger div{width:25px; height:3px; background:var(--vv-purple); margin:4px 0; border-radius:2px;}
-    .mobile-menu{
-      display:none; position:absolute; top:60px; right:20px; background:#fff;
-      border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,0.2); padding:12px; flex-direction:column; gap:12px;
+  @media (max-width: 768px) {
+    .nav-inner {
+      flex-direction: column;
+      gap: 10px;
     }
-    .mobile-menu a,#ai-avatar-mobile{color:var(--vv-purple); text-decoration:none; padding:8px 12px; border-radius:10px; display:flex; align-items:center; gap:8px;}
-    .mobile-menu a:hover,#ai-avatar-mobile:hover{background:var(--vv-purple); color:#fff; cursor:pointer;}
-    #ai-avatar-mobile img{height:36px; width:36px; border-radius:50%;}
   }
 </style>
 </head>
+
 <body>
 
 <!-- Navbar -->
 <nav class="nav">
   <div class="nav-inner">
     <div class="brand">
-      <img src="Valiant Vision.jpg" alt="Valiant Vision logo">
+      <img src="Valiant Vision.jpg" alt="Valiant Vision logo" />
       <div class="name">Valiant Vision</div>
     </div>
     <div class="menu">
@@ -89,22 +165,7 @@
       <a href="#problem">Problem</a>
       <a href="#solution">Solution</a>
       <a href="subscribe.html">Subscribe</a>
-      <div id="ai-avatar">
-        <img src="ai-avatar.png" alt="AI Avatar">
-      </div>
-    </div>
-    <div class="hamburger" onclick="toggleMobileMenu()">
-      <div></div><div></div><div></div>
-    </div>
-    <div class="mobile-menu" id="mobileMenu">
-      <a href="index.html">Home</a>
-      <a href="#about">About</a>
-      <a href="#problem">Problem</a>
-      <a href="#solution">Solution</a>
-      <a href="subscribe.html">Subscribe</a>
-      <div id="ai-avatar-mobile">
-        <img src="ai-avatar.png" alt="AI Avatar">
-      </div>
+      <div id="ai-avatar" title="Login">L</div>
     </div>
   </div>
 </nav>
@@ -113,36 +174,37 @@
 <div class="login-container">
   <h1>Welcome Back!</h1>
   <p>The Way It's Meant To Be Learnt</p>
-  <input type="text" placeholder="Username" id="username">
-  <input type="password" placeholder="Password" id="password">
+  <input type="text" placeholder="Username" id="username" />
+  <input type="password" placeholder="Password" id="password" />
   <button onclick="login()">Login</button>
 </div>
 
 <script>
-function toggleMobileMenu(){
-  const menu = document.getElementById('mobileMenu');
-  if(menu.style.display === 'flex'){ menu.style.display = 'none'; }
-  else{ menu.style.display = 'flex'; menu.style.flexDirection = 'column'; }
-}
+function login() {
+  const username = document.getElementById("username").value.trim();
+  const password = document.getElementById("password").value.trim();
 
-function login(){
-  const username = document.getElementById('username').value.trim();
-  const password = document.getElementById('password').value.trim();
-  if(username && password){
+  if (username && password) {
     alert("Login Successful for " + username);
-    // Here you can redirect to profile page
-    // window.location.href = 'profile.html';
+    localStorage.setItem("loggedInUser", username);
+    updateAvatar(username);
   } else {
     alert("Please enter username and password.");
   }
 }
 
-// Optional: AI avatar click
-document.getElementById('ai-avatar').addEventListener('click', function(){
-  alert("AI Avatar clicked! Replace this with your login action.");
-});
-document.getElementById('ai-avatar-mobile').addEventListener('click', function(){
-  alert("AI Avatar clicked! Replace this with your login action.");
+function updateAvatar(username) {
+  const avatar = document.getElementById("ai-avatar");
+  avatar.textContent = username.charAt(0).toUpperCase();
+  avatar.title = username;
+}
+
+// If user is already logged in, update avatar
+window.addEventListener("load", () => {
+  const savedUser = localStorage.getItem("loggedInUser");
+  if (savedUser) {
+    updateAvatar(savedUser);
+  }
 });
 </script>
 
