--- a/profile.html
+++ b/profile.html
@@ -4,32 +4,219 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Profile | Valiant Vision</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
-  body { font-family:'Lora', serif; margin:0; background:#f4f4f7; display:flex; justify-content:center; padding:30px; }
-  .profile-card { background:#fff; border-radius:18px; padding:30px; width:100%; max-width:700px; box-shadow:0 10px 30px rgba(0,0,0,.08); position:relative; }
-  .profile-header { display:flex; align-items:center; justify-content:space-between; }
-  .profile-img { width:100px; height:100px; border-radius:50%; background:#ddd; cursor:pointer; object-fit:cover; }
-  .edit-btn { font-size:1.2rem; cursor:pointer; }
-  .profile-details { margin-top:20px; }
-  .profile-details div { margin-bottom:12px; font-size:1rem; }
-  .badge { margin-top:20px; display:flex; align-items:center; font-weight:600; color:#4300b9; }
-  .badge img { width:50px; height:50px; margin-right:10px; border-radius:12px; }
+  body {
+    font-family: 'Lora', serif;
+    margin: 0;
+    background: linear-gradient(135deg, #f3f5fa, #e8eafc);
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+    min-height: 100vh;
+  }
+
+  .profile-card {
+    background: #fff;
+    border-radius: 22px;
+    padding: 40px;
+    width: 100%;
+    max-width: 780px;
+    box-shadow: 0 10px 50px rgba(67, 0, 185, 0.1);
+    position: relative;
+    transition: all 0.4s ease;
+  }
+
+  .profile-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 20px 60px rgba(67, 0, 185, 0.2);
+  }
+
+  .profile-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #eee;
+    padding-bottom: 20px;
+  }
+
+  .profile-left {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .profile-img {
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, #ece9e6, #ffffff);
+    cursor: pointer;
+    object-fit: cover;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+  }
+
+  .profile-img:hover {
+    transform: scale(1.05);
+  }
+
+  .edit-btn, .logout-btn {
+    background: #4300b9;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 12px;
+    cursor: pointer;
+    font-size: 0.95rem;
+    transition: background 0.3s ease;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+  }
+
+  .edit-btn:hover, .logout-btn:hover {
+    background: #320094;
+  }
+
+  .logout-btn {
+    background: #d32f2f;
+    margin-left: 10px;
+  }
+
+  .logout-btn:hover {
+    background: #b71c1c;
+  }
+
+  .profile-details {
+    margin-top: 30px;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .profile-details div {
+    margin-bottom: 14px;
+    font-size: 1rem;
+    color: #333;
+  }
+
+  .badge {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    color: #4300b9;
+    background: #f6f3ff;
+    padding: 10px 15px;
+    border-radius: 12px;
+  }
+
+  .badge img {
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+    border-radius: 12px;
+  }
+
+  /* Modal Styling */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    background: white;
+    padding: 30px;
+    border-radius: 18px;
+    width: 90%;
+    max-width: 500px;
+    box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+    animation: fadeIn 0.3s ease;
+  }
+
+  .modal-content h2 {
+    color: #4300b9;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 15px;
+  }
+
+  .modal-content input {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 1rem;
+  }
+
+  .modal-content button {
+    background: #4300b9;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 8px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-weight: 600;
+  }
+
+  .modal-content button:hover {
+    background: #320094;
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.95); }
+    to { opacity: 1; transform: scale(1); }
+  }
 </style>
 </head>
 <body>
 
 <div class="profile-card">
   <div class="profile-header">
-    <img id="profileImg" class="profile-img" src="" alt="Profile Image">
-    <span class="edit-btn" title="Edit Profile">✏️</span>
+    <div class="profile-left">
+      <img id="profileImg" class="profile-img" src="" alt="Profile Image">
+      <div>
+        <h2 id="userName" style="margin:0;color:#4300b9;font-family:'Montserrat',sans-serif;"></h2>
+        <small id="userEmail" style="color:#555;"></small>
+      </div>
+    </div>
+    <div>
+      <button class="edit-btn" id="editProfile">Edit Profile</button>
+      <button class="logout-btn" id="logoutBtn">Logout</button>
+    </div>
   </div>
 
   <div class="profile-details" id="profileDetails"></div>
 
   <div class="badge" id="badge" style="display:none;">
     <img id="badgeImage" src="">
-    Subscriber Badge
+    <span>Subscriber Badge</span>
+  </div>
+</div>
+
+<!-- Edit Modal -->
+<div class="modal" id="editModal">
+  <div class="modal-content">
+    <h2>Edit Profile</h2>
+    <input id="editName" placeholder="Name">
+    <input id="editEmail" placeholder="Email">
+    <input id="editPhone" placeholder="Phone">
+    <input id="editState" placeholder="State">
+    <input id="editCountry" placeholder="Country">
+    <input id="editClass" placeholder="Class">
+    <input id="editSchool" placeholder="School">
+    <input id="editSkills" placeholder="Skills">
+    <input id="editHobbies" placeholder="Hobbies">
+    <input id="editAchievements" placeholder="Achievements">
+    <button id="saveProfile">Save Changes</button>
   </div>
 </div>
 
@@ -37,36 +224,94 @@
 
 <script>
 let user = JSON.parse(localStorage.getItem("userProfile"));
-if(!user) { alert("No data found!"); window.location.href="subscribe.html"; }
+if(!user) {
+  alert("Please login first!");
+  window.location.href = "subscribe.html";
+}
 
-function renderProfile(){
+function getInitials(name) {
+  return name ? name.split(' ').map(n => n[0]).join('').toUpperCase() : 'VV';
+}
+
+function renderProfile() {
   document.getElementById("profileDetails").innerHTML = `
-    <div><strong>Name:</strong> ${user.name}</div>
-    <div><strong>Email:</strong> ${user.email}</div>
-    <div><strong>Phone:</strong> ${user.phone}</div>
-    <div><strong>State:</strong> ${user.state}</div>
-    <div><strong>Country:</strong> ${user.country}</div>
-    <div><strong>Class:</strong> ${user.class}</div>
-    <div><strong>School:</strong> ${user.school}</div>
-    <div><strong>Skills:</strong> ${user.skills}</div>
-    <div><strong>Hobbies:</strong> ${user.hobbies}</div>
-    <div><strong>Achievements:</strong> ${user.achievements}</div>
+    <div><strong>Phone:</strong> ${user.phone || ''}</div>
+    <div><strong>State:</strong> ${user.state || ''}</div>
+    <div><strong>Country:</strong> ${user.country || ''}</div>
+    <div><strong>Class:</strong> ${user.class || ''}</div>
+    <div><strong>School:</strong> ${user.school || ''}</div>
+    <div><strong>Skills:</strong> ${user.skills || ''}</div>
+    <div><strong>Hobbies:</strong> ${user.hobbies || ''}</div>
+    <div><strong>Achievements:</strong> ${user.achievements || ''}</div>
   `;
-
-  document.getElementById("profileImg").src = user.profileImage || "https://i.pravatar.cc/100";
   
+  document.getElementById("userName").innerText = user.name || "User";
+  document.getElementById("userEmail").innerText = user.email || "";
+
+  if(user.profileImage) {
+    document.getElementById("profileImg").src = user.profileImage;
+  } else {
+    const initials = getInitials(user.name);
+    const canvas = document.createElement("canvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = 100; canvas.height = 100;
+    ctx.fillStyle = "#4300b9";
+    ctx.fillRect(0, 0, 100, 100);
+    ctx.fillStyle = "white";
+    ctx.font = "bold 40px Montserrat";
+    ctx.textAlign = "center";
+    ctx.textBaseline = "middle";
+    ctx.fillText(initials, 50, 50);
+    document.getElementById("profileImg").src = canvas.toDataURL();
+  }
+
   if(user.badge && user.badgeImage){
     document.getElementById("badge").style.display="flex";
     document.getElementById("badgeImage").src = user.badgeImage;
+  } else {
+    document.getElementById("badge").style.display="none";
   }
 }
 
 renderProfile();
 
-// Edit button to update profile info
-document.querySelector(".edit-btn").addEventListener("click", () => {
-  const newName = prompt("Enter Name:", user.name);
-  if(newName) { user.name = newName; localStorage.setItem("userProfile", JSON.stringify(user)); renderProfile(); }
+// Edit Profile Modal
+const modal = document.getElementById("editModal");
+document.getElementById("editProfile").addEventListener("click", () => {
+  modal.style.display = "flex";
+  document.getElementById("editName").value = user.name || '';
+  document.getElementById("editEmail").value = user.email || '';
+  document.getElementById("editPhone").value = user.phone || '';
+  document.getElementById("editState").value = user.state || '';
+  document.getElementById("editCountry").value = user.country || '';
+  document.getElementById("editClass").value = user.class || '';
+  document.getElementById("editSchool").value = user.school || '';
+  document.getElementById("editSkills").value = user.skills || '';
+  document.getElementById("editHobbies").value = user.hobbies || '';
+  document.getElementById("editAchievements").value = user.achievements || '';
+});
+
+document.getElementById("saveProfile").addEventListener("click", () => {
+  user = {
+    ...user,
+    name: document.getElementById("editName").value,
+    email: document.getElementById("editEmail").value,
+    phone: document.getElementById("editPhone").value,
+    state: document.getElementById("editState").value,
+    country: document.getElementById("editCountry").value,
+    class: document.getElementById("editClass").value,
+    school: document.getElementById("editSchool").value,
+    skills: document.getElementById("editSkills").value,
+    hobbies: document.getElementById("editHobbies").value,
+    achievements: document.getElementById("editAchievements").value
+  };
+  localStorage.setItem("userProfile", JSON.stringify(user));
+  modal.style.display = "none";
+  renderProfile();
+});
+
+window.addEventListener("click", (e) => {
+  if (e.target === modal) modal.style.display = "none";
 });
 
 // Change profile image
@@ -83,6 +328,14 @@ document.getElementById("profileInput").addEventListener("change", (e) => {
     renderProfile();
   };
   reader.readAsDataURL(e.target.files[0]);
+});
+
+// Logout button
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  if(confirm("Are you sure you want to logout?")) {
+    localStorage.removeItem("userProfile");
+    window.location.href = "index.html";
+  }
 });
 </script>
 
