--- a/whiteboard.html
+++ b/whiteboard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valiant Vision Whiteboard</title>
+<title>Whiteboard</title>
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
 <style>
@@ -14,6 +14,7 @@
   --vv-accent:#6200ea;
   --vv-red:#e53935;
   --vv-yellow:#ffeb3b;
+  --vv-orange:#ff9800;
 }
 
 body {
@@ -26,7 +27,7 @@ body {
 }
 
 #whiteboard-container{
-  max-width:1300px;
+  max-width:1400px;
   margin:20px auto;
   padding:0 20px;
   width:100%;
@@ -70,6 +71,7 @@ h2{
   display:block;
 }
 
+/* Sticky Notes */
 .sticky-note{
   position:absolute;
   background:#fffb8f;
@@ -98,45 +100,89 @@ h2{
   padding:0 5px;
   cursor:pointer;
 }
+
+/* Shape dropdown (hamburger) */
+.dropdown{
+  position:relative;
+  display:inline-block;
+}
+.dropdown-content{
+  display:none;
+  position:absolute;
+  background:#fff;
+  min-width:120px;
+  box-shadow:0 8px 16px rgba(0,0,0,0.2);
+  border-radius:8px;
+  z-index:1000;
+}
+.dropdown-content button{
+  background:#00c853;
+  color:white;
+  padding:8px 12px;
+  border:none;
+  display:block;
+  width:100%;
+  text-align:left;
+  margin:0;
+  border-radius:0;
+}
+.dropdown-content button:hover{background:#6200ea;}
+.dropdown:hover .dropdown-content{display:block;}
 </style>
 </head>
 <body>
 
 <div id="whiteboard-container">
-  <h2>Valiant Vision Professional Whiteboard</h2>
+  <h2>Whiteboard</h2>
   <div id="whiteboard-tools">
     <button onclick="setTool('pen')">Pen</button>
     <button onclick="setTool('eraser')">Eraser</button>
-    <button onclick="setTool('line')">Line</button>
-    <button onclick="setTool('dotted')">Dotted Line</button>
-    <button onclick="setTool('curve')">Curve</button>
-    <button onclick="setTool('rect')">Rectangle</button>
-    <button onclick="setTool('circle')">Circle</button>
-    <button onclick="setTool('ellipse')">Ellipse</button>
-    <button onclick="setTool('triangle')">Triangle</button>
-    <button onclick="setTool('star')">Star</button>
-    <button onclick="setTool('arrow')">Arrow</button>
-    <button onclick="setTool('polygon')">Polygon</button>
+
+    <!-- Shape Dropdown -->
+    <div class="dropdown">
+      <button>Shapes ▼</button>
+      <div class="dropdown-content">
+        <button onclick="setTool('line')">Line</button>
+        <button onclick="setTool('dotted')">Dotted Line</button>
+        <button onclick="setTool('rect')">Rectangle</button>
+        <button onclick="setTool('circle')">Circle</button>
+        <button onclick="setTool('ellipse')">Ellipse</button>
+        <button onclick="setTool('triangle')">Triangle</button>
+        <button onclick="setTool('star')">Star</button>
+        <button onclick="setTool('arrow')">Arrow</button>
+        <button onclick="setTool('polygon')">Polygon</button>
+        <button onclick="setTool('curve')">Curve</button>
+      </div>
+    </div>
+
     <button onclick="setTool('text')">Text</button>
     <button onclick="addSticky()">Sticky Note</button>
     <button onclick="clearBoard()">Clear All</button>
 
     <label>Color: <input type="color" id="colorPicker" value="#000000"></label>
     <label>Width: <input type="number" id="widthPicker" value="3" min="1" max="50"></label>
+
     <label>Font Size: <input type="number" id="fontSize" value="20" min="10" max="72"></label>
-    <label>Font: 
-      <select id="fontStyle">
-        <option value="Arial">Arial</option>
-        <option value="Verdana">Verdana</option>
-        <option value="Times New Roman">Times New Roman</option>
-        <option value="Courier New">Courier New</option>
-      </select>
+    <label>Font:
+      <select id="fontStyle"></select>
     </label>
   </div>
+
   <canvas id="whiteboard"></canvas>
 </div>
 
 <script>
+// --- Fonts ---
+const fonts=["Arial","Verdana","Times New Roman","Courier New","Georgia","Trebuchet MS","Impact","Comic Sans MS","Tahoma","Lucida Console","Palatino","Garamond","Bookman","Candara","Monaco","Futura","Century Gothic","Calibri","Optima","Franklin Gothic"];
+const fontSelect=document.getElementById('fontStyle');
+fonts.forEach(f=>{
+  const opt=document.createElement('option');
+  opt.value=f;
+  opt.innerText=f;
+  opt.style.fontFamily=f;
+  fontSelect.appendChild(opt);
+});
+
 // --- Canvas Setup ---
 const canvas=document.getElementById('whiteboard');
 const ctx=canvas.getContext('2d');
@@ -145,7 +191,6 @@ let tempCtx=tempCanvas.getContext('2d');
 let drawing=false, startX=0, startY=0, tool='pen';
 let color='#000', width=3, fontSize=20, fontStyle='Arial';
 
-// Resize
 function resizeCanvas(){
   canvas.width=canvas.offsetWidth;
   canvas.height=canvas.offsetHeight;
@@ -155,16 +200,14 @@ function resizeCanvas(){
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-// Tool selector
 function setTool(t){ tool=t; }
 
-// Clear
 function clearBoard(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   document.querySelectorAll('.sticky-note').forEach(n=>n.remove());
 }
 
-// Position
+// --- Position ---
 function getPos(e){
   const rect=canvas.getBoundingClientRect();
   let x,y;
@@ -174,11 +217,13 @@ function getPos(e){
 }
 
 // --- Sticky Notes ---
+const stickyColors=["#fffb8f","#ffcccc","#ccffcc","#cce0ff","#ffccff","#ffe0b3"];
 function addSticky(){
   const note=document.createElement('div');
   note.classList.add('sticky-note');
   note.style.top='100px';
   note.style.left='100px';
+  note.style.background=stickyColors[Math.floor(Math.random()*stickyColors.length)];
   note.innerHTML=`<div class="note-header">Note <button onclick="this.parentElement.parentElement.remove()">X</button></div><div contenteditable style="min-height:50px;"></div>`;
   document.body.appendChild(note);
   dragElement(note);
@@ -229,7 +274,7 @@ function draw(e){
   const pos=getPos(e);
   if(tool==='pen'){ ctx.strokeStyle=color; ctx.lineWidth=width; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
   else if(tool==='eraser'){ ctx.strokeStyle='#fff'; ctx.lineWidth=width*2; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
-  else if(['line','dotted','rect','circle','ellipse','triangle','star','arrow','polygon','curve'].includes(tool)){
+  else if(['line','dotted','rect','circle','ellipse','triangle','star','arrow','polygon','curve','text'].includes(tool)){
     tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
     tempCtx.drawImage(canvas,0,0);
     tempCtx.strokeStyle=color; tempCtx.lineWidth=width;
@@ -237,6 +282,7 @@ function draw(e){
     const w=pos.x-startX, h=pos.y-startY;
     switch(tool){
       case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+      case 'dotted': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
       case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
       case 'circle': tempCtx.beginPath(); let r=Math.sqrt(w*w+h*h); tempCtx.arc(startX,startY,r,0,2*Math.PI); tempCtx.stroke(); break;
       case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
@@ -245,6 +291,7 @@ function draw(e){
       case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
       case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
       case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h, pos.x,pos.y); tempCtx.stroke(); break;
+      case 'text': tempCtx.font=`${fontSize}px ${fontStyle}`; tempCtx.fillStyle=color; tempCtx.fillText("Sample Text",pos.x,pos.y); break;
     }
   }
 }
@@ -256,7 +303,7 @@ function endDraw(e){
   tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
 }
 
-// --- Shape helpers ---
+// Shape helpers
 function drawStar(c,x,y,points,outer,rInner){ const angle=Math.PI/points; c.beginPath(); for(let i=0;i<2*points;i++){ const r=i%2===0?outer:rInner; const a=i*angle-Math.PI/2; c.lineTo(x+r*Math.cos(a),y+r*Math.sin(a)); } c.closePath(); c.stroke(); }
 function drawArrow(c,x1,y1,x2,y2){ const headLength=15; const dx=x2-x1, dy=y2-y1, angle=Math.atan2(dy,dx); c.beginPath(); c.moveTo(x1,y1); c.lineTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle-Math.PI/6),y2-headLength*Math.sin(angle-Math.PI/6)); c.moveTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle+Math.PI/6),y2-headLength*Math.sin(angle+Math.PI/6)); c.stroke(); }
 function drawPolygon(c,x,y,sides,r){ c.beginPath(); for(let i=0;i<sides;i++){ const a=(2*Math.PI*i/sides)-Math.PI/2; const px=x+r*Math.cos(a), py=y+r*Math.sin(a); if(i===0) c.moveTo(px,py); else c.lineTo(px,py); } c.closePath(); c.stroke(); }
