--- a/index.html
+++ b/index.html
@@ -211,13 +211,6 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
   opacity: 1;
   transform: translateX(50%) translateY(5px);
 }
-
-/* Whiteboard overlay */
-#whiteboard-container{
-  display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.95); backdrop-filter:blur(6px); z-index:1000;
-}
-#whiteboard{width:100%; height:100%; position:relative; overflow:hidden;}
-#whiteboard-container button{margin-right:8px;}
 </style>
 </head>
 <body>
@@ -241,7 +234,7 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
         <a href="#problem">Problem</a>
         <a href="#solution">Our Solution</a>
         <a href="subscribe.html">Subscribe</a>
-        <a href="#" id="whiteboard-link">Whiteboard</a>
+        <a href="whiteboard.html" id="whiteboard-link">Whiteboard</a>
         <a href="profile.html">My Profile</a>
       </div>
       <div class="ai-login" id="ai-login" title="AI Assistant"></div>
@@ -295,94 +288,6 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
 
-<!-- WHITEBOARD OVERLAY -->
-<div id="whiteboard-container">
-  <div id="whiteboard">
-    <div style="position:absolute;top:12px;left:12px; z-index:200;">
-      <button id="closeWhiteboard" class="btn">Close</button>
-      <button id="clearWhiteboard" class="btn">Clear</button>
-      <button id="saveWhiteboard" class="btn">Save</button>
-    </div>
-    <canvas id="wbCanvas" width="1200" height="700" style="border:1px solid #ccc; display:block; margin:auto; background:rgba(255,255,255,0.9);"></canvas>
-  </div>
-</div>
-
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-<script>
-// Firebase Config
-const firebaseConfig = {
-  apiKey: "AIzaSyD16sdf6IAT6PdtQ6EHaVazHZGQ0HfegRQ",
-  authDomain: "valiantvisionwhiteboard-c7556.firebaseapp.com",
-  projectId: "valiantvisionwhiteboard-c7556",
-  storageBucket: "valiantvisionwhiteboard-c7556.appspot.com",
-  messagingSenderId: "1083615368437",
-  appId: "1:1083615368437:web:d34603807479c84a5a21bc",
-  databaseURL: "https://valiantvisionwhiteboard-c7556-default-rtdb.firebaseio.com"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database().ref('whiteboard');
-
-// Whiteboard Logic
-const wbContainer = document.getElementById('whiteboard-container');
-const canvas = document.getElementById('wbCanvas');
-const ctx = canvas.getContext('2d');
-let drawing=false;
-
-canvas.addEventListener('mousedown',e=>{
-  drawing=true;
-  ctx.beginPath();
-  ctx.moveTo(e.offsetX,e.offsetY);
-});
-canvas.addEventListener('mouseup',()=>{drawing=false;});
-canvas.addEventListener('mousemove',e=>{
-  if(drawing){
-    ctx.lineTo(e.offsetX,e.offsetY);
-    ctx.strokeStyle='#4300b9';
-    ctx.lineWidth=2;
-    ctx.stroke();
-  }
-});
-
-// Save & clear
-document.getElementById('clearWhiteboard').addEventListener('click', ()=>{
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  db.set(null);
-});
-
-document.getElementById('saveWhiteboard').addEventListener('click', ()=>{
-  const link = document.createElement('a');
-  link.download='whiteboard.png';
-  link.href=canvas.toDataURL();
-  link.click();
-});
-
-// Open whiteboard
-document.getElementById('whiteboard-link').addEventListener('click', e=>{
-  e.preventDefault();
-  wbContainer.style.display='block';
-});
-
-// Close whiteboard
-document.getElementById('closeWhiteboard').addEventListener('click', ()=>{
-  wbContainer.style.display='none';
-});
-
-// Firebase Sync
-canvas.addEventListener('mouseup', ()=>{
-  const dataUrl = canvas.toDataURL();
-  db.set({img:dataUrl});
-});
-db.on('value', snapshot=>{
-  const val = snapshot.val();
-  if(val && val.img){
-    let img = new Image();
-    img.onload=function(){ctx.drawImage(img,0,0);}
-    img.src=val.img;
-  }
-});
-</script>
-
 <script>
 // Hamburger toggle
 const hamburger = document.getElementById('hamburger');
@@ -408,11 +313,7 @@ window.onload=function(){
     aiLogin.onclick=()=>window.location.href="login.html";
   }
 }
-logoutBtn.addEventListener("click", ()=>{
-  localStorage.removeItem("loggedInUser");
-  window.location.reload();
-});
+logoutBtn.addEventListener("click", ()=>{ localStorage.removeItem("loggedInUser"); window.location.reload(); });
 </script>
-
 </body>
 </html>
