--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
         <a href="#problem">Problem</a>
         <a href="#solution">Our Solution</a>
         <a href="subscribe.html">Subscribe</a>
-        <a href="whiteboard.html" id="whiteboard-link">Whiteboard</a>
+        <a href="whiteboard.html">Open Whiteboard</a>
         <a href="profile.html">My Profile</a>
       </div>
       <div class="ai-login" id="ai-login" title="AI Assistant"></div>
@@ -317,3 +317,4 @@ logoutBtn.addEventListener("click", ()=>{ localStorage.removeItem("loggedInUser"
 </script>
 </body>
 </html>
+
